# tmx_model

./: Cargo.toml  LICENSE  README.md  Third Party Licenses.html  about.hbs  about.toml  rustfmt.toml
src/: chunk.rs  data.rs  editor_settings.rs  layer.rs  lib.rs  map.rs  object.rs  properties.rs  template.rs  tile_set.rs
